--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,12 +16,18 @@
 	// "postCreateCommand": "uname -a",
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "vscode",
+	//"remoteUser": "vscode",
 	"features": {
 		"terraform": "latest",
-		"github-cli": "latest",
+		"git": "latest",
 		"azure-cli": "latest",
 		"powershell": "latest",
 		"dotnet": "latest"
-	}
+	},
+	"extensions": [
+		"ms-azuretools.vscode-bicep",
+		"ms-azuretools.vscode-docker",
+		"ms-dotnettools.csharp",
+		"pulumi.pulumi-lsp-client"
+	]
 }
