update names for consistency

--- a/code/storageAccount/Pulumi/Pulumi.dev.yaml
+++ b/code/storageAccount/Pulumi/Pulumi.dev.yaml
@@ -1,5 +1,5 @@
 config:
   AzureIaCFlavors:location: eastus
   AzureIaCFlavors:env: dev
-  AzureIaCFlavors:baseName: flavorpulumisa
+  AzureIaCFlavors:baseName: flavorspulumisa
   AzureIaCFlavors:storageAccountSKU: Standard_LRS
