--- a/.github/workflows/labler.yml
+++ b/.github/workflows/labler.yml
@@ -11,5 +11,5 @@ jobs:
     steps:
     - uses: actions/labeler@v4
       with:
-        repo-token: "${{ secrets.GITHUB_TOKEN }}"'
+        repo-token: "${{ secrets.GITHUB_TOKEN }}"
       
