--- a/.github/workflows/link_checker.yml
+++ b/.github/workflows/link_checker.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
     - main
+  pull_request:
+      types: [opened]
   schedule:
   # Run everyday at 9:00 AM (See https://pubs.opengroup.org/onlinepubs/9699919799/utilities/crontab.html#tag_20_25_07)
   - cron: "0 9 * * *"
