--- a/code/appService/ARM/manifest.yaml
+++ b/code/appService/ARM/manifest.yaml
@@ -3,4 +3,4 @@ version: 1.0.0
 summary: Azure Web App Environment
 description: Deploys a web app in Azure without a datastore
 runner: ARM
-templatePath: azuredeploy.json
+templatePath: main.json
